--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
 
 
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = "1.10.2_1.1"
+group= "com.gt22" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "SGExp"
 
 //sourceCompatibility = targetCompatibility = '1.8'
 /*compileJava {
@@ -50,10 +50,17 @@ repositories {
     maven {url = "http://maven.covers1624.net"}
 }
 
+configurations {
+    incljar
+}
+
 dependencies {
     compile "li.cil.oc:OpenComputers:MC1.10.2-1.7.1.150"
     compile "codechicken:CodeChickenLib:1.10.2-2.5.9.320:deobf"
     compile group: "net.shadowfacts", name: "Forgelin", version: "1.6.0"
+    deobfCompile "mezz.jei:jei_1.10.2:3.14.7.420:api"
+    runtime "mezz.jei:jei_1.10.2:3.14.7.420"
+    compile configurations.incljar.dependencies
 }
 
 processResources
@@ -74,6 +81,15 @@ processResources
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+}
+
+jar {
+    manifest {
+        attributes "FMLCorePlugin": 'com.gt22.sgexp.coremod.SGExpCoreMod',
+                "FMLCorePluginContainsFMLMod": "true"
+
+    }
+    from configurations.incljar
 }
 
 compileKotlin {
